Switch from Gradle to Maven
Closes gh-1